* web/index.html: update
git-svn-id: file:///home/manu/work/irace/svn/trunk@406 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -110,7 +110,7 @@
     Universit&eacute; Libre de Bruxelles, Belgium, 2011.<br></li>
    </ul>
 
-   <p>Moreover, as a personal note, I would appreciate if you would email
+   <p>Moreover, as a personal note, we would appreciate if you would email
    <strong><code>irace<img id="at" src="img/at.png" alt="@" name=
    "at">iridia.ulb.ac.be</code></strong> with citations of papers referencing this
    work.</p>
