* web/index.html: Fix link.
git-svn-id: file:///home/manu/work/irace/svn/trunk@407 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -126,7 +126,7 @@
 
     <div id="v0.9" class="newsheading">
      <span class="newsversion">Version 0.9</span> <span class="sourcelink">[
-     <a href="http://iridia.ulb.ac.be/irace/irace-0.9.tar.gz">Download source code</a> ]</span> <span class="pdfdoc">[
+     <a href="http://iridia.ulb.ac.be/irace/files/irace-0.9.tar.gz">Download source code</a> ]</span> <span class="pdfdoc">[
      <a href="http://iridia.ulb.ac.be/IridiaTrSeries/IridiaTr2011-004r001.pdf">Download the documentation (PDF)</a> ]</span>
     </div>
 
