web/  * files/ga.js: New. Tracking code.  * web/index.html: Include it.
git-svn-id: file:///home/manu/work/irace/svn/trunk@450 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -11,9 +11,11 @@
  <link rel="stylesheet" type="text/css" media="screen,projection" href=
  "simple.css">
  <!-- link rel="stylesheet" type="text/css" media="screen,projection" href="css/style.css" -->
+<script type="text/javascript" src="files/ga.js"></script>
 
  <title>The irace Package, Iterated Race for Automatic Algorithm
  Configuration</title>
+
 </head>
 
 <body>
@@ -150,20 +152,8 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 30 March 2011<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 09 July 2011<!-- hhmts end --></p>
   </div>
  </div><!-- counter.htm -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3517739-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
-<script type="text/javascript" src="files/gaAddons.js"></script>
-<script type="text/javascript" src="files/tracker.js"></script>
-
 </body>
 </html>
