* web/index.html: Mention that the current version is preliminary.
git-svn-id: file:///home/manu/work/irace/svn/trunk@467 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -134,7 +134,7 @@
 
     <div class="newsbody">
      <ul>
-       <li>First version available.</li>
+       <li>Preliminary version</li>
      </ul>
     </div>
    </div>
@@ -152,7 +152,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 09 October 2011<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 24 October 2011<!-- hhmts end --></p>
   </div>
  </div><!-- counter.htm -->
 </body>
