* index.html: Add README.
git-svn-id: file:///home/manu/work/irace/svn/trunk@569 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -144,7 +144,8 @@
    <div class="sectionBody">
     <span class="sourcelink">[ <a href=
     "http://cran.r-project.org/web/packages/irace/"><strong>Download irace
-    package from CRAN</strong></a> ]</span> 
+    package from CRAN</strong></a> ]</span> <span>[ <a href=
+    "files/README"><strong>README</strong></a> ]</span> 
     <!-- <span class="sourcelink">[ <a href="files/irace_0.9.zip">download Windows binary</a> ]</span> -->
      <!--  <span class="pdfdoc">[<a href= -->
      
@@ -165,7 +166,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 08 February 2012<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 12 February 2012<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
