* web/index.html: Fix typo.
git-svn-id: file:///home/manu/work/irace/svn/trunk@574 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -152,8 +152,7 @@
 
       <td>The files required to set up this tuning scenario are included in the
       package at <code>inst/examples/acotsp/</code> (once installed at
-      <code>file.path(system.file(package="irace"), "inst",
-      "examples","acotsp")</code>.</td>
+      <code>file.path(system.file(package="irace"), "examples","acotsp")</code>.</td>
      </tr>
     </tbody>
    </table>
@@ -203,7 +202,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 17 February 2012<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 20 February 2012<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
