* index.html: Add link to ACOTSP.
git-svn-id: file:///home/manu/work/irace/svn/trunk@578 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -150,9 +150,14 @@
       <td><a href="files/tsp-instances-testing.tar.bz2">50 random euclidean TSP
       instances (1000 cities)</a></td>
 
-      <td>The files required to set up this tuning scenario are included in the
-      package at <code>inst/examples/acotsp/</code> (once installed at
-      <code>file.path(system.file(package="irace"), "examples","acotsp")</code>.</td>
+      <td>This scenario requires to <a href=
+      "http://www.aco-metaheuristic.org/aco-code/">download and compile the
+      ACOTSP software</a>.<br>
+      The <code>irace</code> configuration files required to set up this tuning
+      scenario are included in the package at
+      <code>inst/examples/acotsp/</code> (once installed at
+      <code>file.path(system.file(package="irace"),
+      "examples","acotsp")</code>.</td>
      </tr>
     </tbody>
    </table>
