* web/index.html: Tell people to read the README.
git-svn-id: file:///home/manu/work/irace/svn/trunk@581 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -66,8 +66,10 @@
     package, Iterated Race for Automatic Algorithm Configuration</b>. Technical
     Report TR/IRIDIA/2011-004, IRIDIA, Universit&eacute; Libre de Bruxelles,
     Belgium, 2011.<br>
-    [&nbsp;<a href=
-    "http://iridia.ulb.ac.be/~manuel/LopezIbanez_bib.html#LopDubStu2011irace">bibtex</a>&nbsp;]</dd>
+    [<a href=
+    "http://iridia.ulb.ac.be/~manuel/LopezIbanez_bib.html#LopDubStu2011irace">&nbsp;bibtex&nbsp;</a>|<a class="pdfdoc"
+    href=
+    "http://iridia.ulb.ac.be/IridiaTrSeries/IridiaTr2011-004.pdf">&nbsp;PDF&nbsp;</a>]</dd>
    </dl>
    <hr>
 
@@ -165,6 +167,18 @@
 
    <h2 id="download">Download</h2>
 
+   <p><b>NOTE:</b> After installation, the package can be used from within R or
+   as a command-line tool. See the <a href=
+   "files/README"><strong>README</strong></a> file for more information.</p>
+
+   <div class="sectionBody">
+     <span>[<a href="files/README"><strong> README
+     </strong></a>]</span> 
+     <span class="sourcelink">[<a href=
+    "http://cran.r-project.org/web/packages/irace/"><strong> Download irace
+    package from CRAN </strong></a>]</span>
+   </div>
+
    <p>The software is provided as an R package available from CRAN. This means
    that it can be installed by invoking R and within R calling:</p>
    <pre>
@@ -181,18 +195,6 @@
    <p>where <code>&lt;<em>package</em>&gt;</code> is one of the three versions
    available: <code>.tar.gz</code> (Unix/BSD/GNU/Linux), <code>.tgz</code>
    (MacOS X), or <code>.zip</code> (Windows).</p>
-
-   <div class="sectionBody">
-    <span class="sourcelink">[ <a href=
-    "http://cran.r-project.org/web/packages/irace/"><strong>Download irace
-    package from CRAN</strong></a> ]</span> <span>[ <a href=
-    "files/README"><strong>README</strong></a> ]</span> 
-    <!-- <span class="sourcelink">[ <a href="files/irace_0.9.zip">download Windows binary</a> ]</span> -->
-     <!--  <span class="pdfdoc">[<a href= -->
-     
-    <!-- "http://cran.r-project.org/web/packages/irace/irace.pdf"><strong> Download Reference -->
-     <!-- manual </strong></a>]</span> -->
-   </div>
   </div>
   <hr>
   <!-- footer.htm -->
@@ -207,7 +209,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 20 February 2012<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 01 March 2012<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
