* web/index.html(Download): Reorganize.
git-svn-id: file:///home/manu/work/irace/svn/trunk@587 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -171,30 +171,33 @@
    as a command-line tool. See the <a href=
    "files/README"><strong>README</strong></a> file for more information.</p>
 
-   <div class="sectionBody">
-     <span>[<a href="files/README"><strong> README
-     </strong></a>]</span> 
-     <span class="sourcelink">[<a href=
-    "http://cran.r-project.org/web/packages/irace/"><strong> Download irace
-    package from CRAN </strong></a>]</span>
-   </div>
-
    <p>The software is provided as an R package available from CRAN. This means
-   that it can be installed by invoking R and within R calling:</p>
+   that it can be installed by invoking R:</p>
    <pre>
-   install.packages("irace")
+   $ R
+   &gt; install.packages("irace")
 </pre>
 
    <p>Or it can also be installed by <a href=
-   "http://cran.r-project.org/web/packages/irace/">downloading the package</a>
-   and invoking at the command-line:<br></p>
+   "http://cran.r-project.org/package=irace">downloading the package</a> and
+   invoking at the command-line:<br></p>
    <pre>
-   R CMD INSTALL &lt;<em>package</em>&gt;
+   $ R CMD INSTALL &lt;<em>package</em>&gt;
 </pre>
 
    <p>where <code>&lt;<em>package</em>&gt;</code> is one of the three versions
    available: <code>.tar.gz</code> (Unix/BSD/GNU/Linux), <code>.tgz</code>
    (MacOS X), or <code>.zip</code> (Windows).</p>
+  </div>
+
+  <p>See the <a href="files/README">README</a> file in case you have
+  troubles.</p>
+
+  <div class="sectionBody">
+   <span>[ <a href="files/README"><strong>README</strong></a> ]</span>
+   <span class="sourcelink">[ <a href=
+   "http://cran.r-project.org/web/packages/irace/"><strong>Download irace
+   package from CRAN</strong></a> ]</span>
   </div>
   <hr>
   <!-- footer.htm -->
@@ -209,7 +212,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 01 March 2012<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 02 March 2012<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
