* web/index.html: Mention TR more.
git-svn-id: file:///home/manu/work/irace/svn/trunk@745 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -62,9 +62,10 @@
     <dt id="LopDubStu2011irace">[1]</dt>
 
     <dd>Manuel L&oacute;pez-Ib&aacute;&ntilde;ez, J&eacute;r&eacute;mie
-    Dubois-Lacoste, Thomas St&uuml;tzle, and Mauro Birattari. <b>The irace
-    package, Iterated Race for Automatic Algorithm Configuration</b>. Technical
-    Report TR/IRIDIA/2011-004, IRIDIA, Universit&eacute; Libre de Bruxelles,
+    Dubois-Lacoste, Thomas St&uuml;tzle, and Mauro Birattari. <b><a  href=
+    "http://iridia.ulb.ac.be/IridiaTrSeries/IridiaTr2011-004.pdf">The irace
+    package, Iterated Race for Automatic Algorithm Configuration</a></b>. Technical
+    Report TR/IRIDIA/2011-004, IRIDIA, Universit&eacute; libre de Bruxelles,
     Belgium, 2011.<br>
     [<a href=
     "http://iridia.ulb.ac.be/~manuel/LopezIbanez_bib.html#LopDubStu2011irace">&nbsp;bibtex&nbsp;</a>|<a class="pdfdoc"
@@ -85,7 +86,7 @@
 
    <h2 id="license">License</h2>
 
-   <p>This software is Copyright (C) 2011, 2012 Manuel
+   <p>This software is Copyright (C) 2011-2013 Manuel
    L&oacute;pez-Ib&aacute;&ntilde;ez and Jérémie Dubois-Lacoste.</p>
 
    <p>This program is free software (software libre); you can redistribute it
@@ -112,7 +113,7 @@
     J&eacute;r&eacute;mie Dubois-Lacoste, Thomas St&uuml;tzle, and Mauro
     Birattari. <b>The irace package, Iterated Race for Automatic Algorithm
     Configuration</b>. Technical Report TR/IRIDIA/2011-004, IRIDIA,
-    Universit&eacute; Libre de Bruxelles, Belgium, 2011.<br></li>
+    Universit&eacute; libre de Bruxelles, Belgium, 2011.<br></li>
    </ul>
 
    <p>Moreover, as a personal note, we would appreciate if you would email
@@ -198,6 +199,10 @@
    <span class="sourcelink">[ <a href=
    "http://cran.r-project.org/web/packages/irace/"><strong>Download irace
    package from CRAN</strong></a> ]</span>
+<span class="sourcelink">[ <a class="pdfdoc"
+    href=
+    "http://iridia.ulb.ac.be/IridiaTrSeries/IridiaTr2011-004.pdf"><b>Tutorial
+   (PDF)</b></a> ]</span>
   </div>
   <hr>
   <!-- footer.htm -->
@@ -212,7 +217,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 02 March 2012<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 13 January 2013<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
