* web/index.html: Fix description of ACO example.
git-svn-id: file:///home/manu/work/irace/svn/trunk@751 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -157,10 +157,11 @@
       "http://www.aco-metaheuristic.org/aco-code/">download and compile the
       ACOTSP software</a>.<br>
       The <code>irace</code> configuration files required to set up this tuning
-      scenario are included in the package at
-      <code>inst/examples/acotsp/</code> (once installed at
+      scenario are included in the package sources at
+      <code>inst/examples/acotsp/</code>. Once the package is
+      installed, the files can be found by invoking
       <code>file.path(system.file(package="irace"),
-      "examples","acotsp")</code>.</td>
+      "examples","acotsp")</code> within R.</td>
      </tr>
     </tbody>
    </table>
@@ -217,7 +218,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 13 January 2013<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 15 January 2013<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
