* web/index.html: fix internal link
git-svn-id: file:///home/manu/work/irace/svn/trunk@875 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
     <ul>
      <li><a href="#intro">Introduction</a></li>
 
-     <li><a href="#usage">People</a></li>
+     <li><a href="#people">People</a></li>
 
      <li><a href="#license">License</a></li>
 
