* DESCRIPTION, web/index.html: Mention Leslie.
git-svn-id: file:///home/manu/work/irace/svn/trunk@953 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -80,9 +80,8 @@
    L&oacute;pez-Ib&aacute;&ntilde;ez</a> and <a href=
    "http://iridia.ulb.ac.be/~jdubois">Jérémie Dubois-Lacoste.</a></p>
 
-   <p><b>Contributors:</b> Thomas St&uuml;tzle, Mauro Birattari, Eric Yuan and
-   Prasanna Balaprakash.</p>
-   <hr>
+   <p><b>Contributors:</b> Leslie Pérez Cáceres, Thomas St&uuml;tzle,
+   Mauro Birattari, Eric Yuan and Prasanna Balaprakash.</p> <hr>
 
    <h2 id="license">License</h2>
 
@@ -218,7 +217,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 15 January 2013<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified:  9 July 2014<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
