Autogenerate README.html from README.md.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1214 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -170,7 +170,7 @@
 
    <p><b>NOTE:</b> After installation, the package can be used from within R or
    as a command-line tool. See the <a href=
-   "files/README"><strong>README</strong></a> file for more information.</p>
+   "files/README.html"><strong>README</strong></a> file for more information.</p>
 
    <p>The software is provided as an R package available from CRAN. This means
    that it can be installed by invoking R:</p>
@@ -191,11 +191,11 @@
    (MacOS X), or <code>.zip</code> (Windows).</p>
   </div>
 
-  <p>See the <a href="files/README">README</a> file in case you have
+  <p>See the <a href="files/README.html">README</a> file in case you have
   troubles.</p>
 
   <div class="sectionBody">
-   <span>[ <a href="files/README"><strong>README</strong></a> ]</span>
+   <span>[ <a href="files/README.html"><strong>README</strong></a> ]</span>
    <span class="sourcelink">[ <a href=
    "http://cran.r-project.org/web/packages/irace/"><strong>Download irace
    package from CRAN</strong></a> ]</span>
@@ -217,7 +217,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified:  9 July 2014<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified:  17 September 2015<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
