* README.md: Show number of downloads.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1221 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/files/README.html
+++ b/web/files/README.html
@@ -54,7 +54,8 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <li><a href="#contact">Contact</a></li>
 </ul>
 </div>
-<p><a href="http://iridia.ulb.ac.be/~manuel/">Manuel L&#243;pez-Ib&#225;&#241;ez</a>, J&#233;r&#233;mie Dubois-Lacoste</p>
+<p><a href="http://cran.rstudio.com/web/packages/irace/index.html"><img src="http://cranlogs.r-pkg.org/badges/irace" alt="CRAN Downloads" /></a></p>
+<p><a href="http://iridia.ulb.ac.be/~manuel/">Manuel L&#243;pez-Ib&#225;&#241;ez</a>, J&#233;r&#233;mie Dubois-Lacoste, Leslie P&#233;rez</p>
 <p>Contact email: irace@iridia.ulb.ac.be</p>
 <h2 id="requisites">Requisites</h2>
 <ul>
