* web/ Add tutorial.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1252 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -71,6 +71,16 @@
     "http://iridia.ulb.ac.be/~manuel/LopezIbanez_bib.html#LopDubStu2011irace">&nbsp;bibtex&nbsp;</a>|<a class="pdfdoc"
     href=
     "http://iridia.ulb.ac.be/IridiaTrSeries/IridiaTr2011-004.pdf">&nbsp;PDF&nbsp;</a>]</dd>
+
+    <dt id="comextutorial">[2]</dt>
+
+    <dd>Manuel L&oacute;pez-Ib&aacute;&ntilde;ez. <b><a href=
+    "./files/irace-comex-tutorial.pdf">The irace
+    software package: A tutorial</a></b>. COMEX Workshop on Practical Automatic Algorithm Configuration, 2014.<br>
+    [<a href=
+    "http://iridia.ulb.ac.be/~manuel/comex_workshop/">&nbsp;workshop webpage&nbsp;</a>|<a class="pdfdoc"
+    href=
+    "./files/irace-comex-tutorial.pdf">&nbsp;PDF&nbsp;</a>]</dd>
    </dl>
    <hr>
 
@@ -201,7 +211,11 @@
    package from CRAN</strong></a> ]</span>
 <span class="sourcelink">[ <a class="pdfdoc"
     href=
-    "http://iridia.ulb.ac.be/IridiaTrSeries/IridiaTr2011-004.pdf"><b>Tutorial
+    "http://iridia.ulb.ac.be/IridiaTrSeries/IridiaTr2011-004.pdf"><b>Technical Report
+   (PDF)</b></a> ]</span>
+<span class="sourcelink">[ <a class="pdfdoc"
+    href=
+    "./files/irace-comex-tutorial.pdf"><b>Tutorial
    (PDF)</b></a> ]</span>
   </div>
   <hr>
@@ -217,7 +231,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified:  17 September 2015<!-- hhmts end --></p>
+   <p id="lastupdate"><!-- hhmts start -->Last modified:  27 October 2015<!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
 </body>
