* web/ Prettify the page.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1254 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,8 @@
      <li><a href="#download">Download</a></li>
     </ul>
    </div>
+
+   <div id="afterlogos"></div>
    <hr>
 
    <h2 id="intro">Introduction</h2>
