web/index.html: added link to the google group
git-svn-id: file:///home/manu/work/irace/svn/trunk@1655 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,8 @@
      <li><a href="#examples">Examples</a></li>
 
      <li><a href="#download">Download</a></li>
+     
+     <li><a href="#support">Support</a></li>
     </ul>
    </div>
 
@@ -229,6 +231,12 @@
    "pdfdoc" href=
    "https://cran.r-project.org/package=irace/vignettes/irace-package.pdf."><b>User Guide (PDF)</b></a> ]</span>
   </div>
+  <hr>
+  
+  <h2 id="support">Support</h2>
+  <div class="sectionBody">
+  For any question or suggestion please contact us in the irace package <a href="https://groups.google.com/d/forum/irace-package">google group</a>.
+ </div>
   <hr>
   <!-- footer.htm -->
 
