move jeremie to contributors.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1656 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
      <li><a href="#examples">Examples</a></li>
 
      <li><a href="#download">Download</a></li>
-     
+
      <li><a href="#support">Support</a></li>
     </ul>
    </div>
@@ -102,10 +102,10 @@
    <h2 id="people">People</h2>
 
    <p><b>Maintainers:</b> <a href="http://iridia.ulb.ac.be/~manuel">Manuel
-   L&oacute;pez-Ib&aacute;&ntilde;ez</a>, Leslie Pérez Cáceres and <a href=
-   "http://iridia.ulb.ac.be/~jdubois">Jérémie Dubois-Lacoste.</a></p>
+   L&oacute;pez-Ib&aacute;&ntilde;ez</a> and Leslie Pérez Cáceres.</p>
 
-   <p><b>Contributors:</b> Thomas St&uuml;tzle, Mauro Birattari, Eric Yuan and
+   <p><b>Contributors:</b> <a href="http://iridia.ulb.ac.be/~jdubois">Jérémie
+   Dubois-Lacoste</a>, Thomas St&uuml;tzle, Mauro Birattari, Eric Yuan and
    Prasanna Balaprakash.</p>
    <hr>
 
@@ -134,10 +134,9 @@
    References section. The appropriate citation is:</p>
 
    <ul>
-     <li style="list-style:none">
-       Manuel L&oacute;pez-Ib&aacute;&ntilde;ez, J&eacute;r&eacute;mie
-    Dubois-Lacoste, Leslie P&eacute;rez C&aacute;ceres, Thomas St&uuml;tzle,
-    and Mauro Birattari. <b><a href=
+    <li style="list-style:none">Manuel L&oacute;pez-Ib&aacute;&ntilde;ez,
+    J&eacute;r&eacute;mie Dubois-Lacoste, Leslie P&eacute;rez C&aacute;ceres,
+    Thomas St&uuml;tzle, and Mauro Birattari. <b><a href=
     "http://dx.doi.org/10.1016/j.orp.2016.09.002">The irace package: Iterated
     Racing for Automatic Algorithm Configuration</a></b>. <em>Operations
     Research Perspectives</em>, 2016.<br></li>
@@ -226,17 +225,20 @@
   <div class="sectionBody">
    <span>[ <a href="files/README.html"><strong>README</strong></a> ]</span>
    <span class="sourcelink">[ <a href=
-   "http://cran.r-project.org/package=irace"><strong>Download irace
-   package from CRAN</strong></a> ]</span> <span class="sourcelink">[ <a class=
-   "pdfdoc" href=
-   "https://cran.r-project.org/package=irace/vignettes/irace-package.pdf."><b>User Guide (PDF)</b></a> ]</span>
+   "http://cran.r-project.org/package=irace"><strong>Download irace package
+   from CRAN</strong></a> ]</span> <span class="sourcelink">[ <a class="pdfdoc"
+   href=
+   "https://cran.r-project.org/package=irace/vignettes/irace-package.pdf."><b>User
+   Guide (PDF)</b></a> ]</span>
   </div>
   <hr>
-  
+
   <h2 id="support">Support</h2>
+
   <div class="sectionBody">
-  For any question or suggestion please contact us in the irace package <a href="https://groups.google.com/d/forum/irace-package">google group</a>.
- </div>
+   For any question or suggestion please contact us in the irace package
+   <a href="https://groups.google.com/d/forum/irace-package">google group</a>.
+  </div>
   <hr>
   <!-- footer.htm -->
 
@@ -250,7 +252,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 11 October 2016
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 12 October 2016 
    <!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
