* Add pub info to irace paper.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1731 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/web/index.html
+++ b/web/index.html
@@ -70,7 +70,7 @@
     and Mauro Birattari. <b><a href=
     "http://dx.doi.org/10.1016/j.orp.2016.09.002">The irace package: Iterated
     Racing for Automatic Algorithm Configuration</a></b>. <em>Operations
-    Research Perspectives</em>, 2016.<br>
+    Research Perspectives</em>, 3:43&ndash;58, 2016.<br>
     [<a href=
     "LopezIbanez_bib.html#LopDubPerStuBir2016irace">bibtex</a>|<a href="http://dx.doi.org/10.1016/j.orp.2016.09.002">doi:&nbsp;10.1016/j.orp.2016.09.002</a>]</dd>
 
@@ -252,7 +252,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 7 November 2016 
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 21 February 2017 
    <!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
